@@ -7,6 +7,8 @@ from exceptions import LinkIntegrityNotificationException
 from interfaces import ILinkIntegrityInfo, IOFSImage
 from urlparse import urlsplit, urlunsplit
 from parser import extractLinks
+import urllib
+
 
 referencedRelationship = 'isReferencing'
 
@@ -16,7 +18,8 @@ def findObject(base, path):
     obj = base
     components = path.split('/')
     while components:
-        try: child = obj.restrictedTraverse(components[0])
+        child_id = urllib.unquote(components[0])
+        try: child = obj.restrictedTraverse(child_id)
         except: return None, None
         if not IItem.providedBy(child):
             break
